--- a/views/employee/index.ejs
+++ b/views/employee/index.ejs
@@ -30,10 +30,12 @@
     <button type="submit" class="btn">Submit</button>
   </form>
   <br>
-  <h1>Dd </h1>
+  <h1>Dddd </h1>
+
+
   <img src="./myImage-1604244850492.png"  class="reponsive-img" alt="sad">
   <img src="../public/uploads/myImage-1604229593371.jpg" alt="">
-  <!-- <img src="<%= typeof file !='undefined' ? file : '' %>  " class="reponsive-img" alt=""> -->
+  <img src="<%= typeof file !='undefined' ? file : '' %>  " class="reponsive-img" alt="">
     </div>
 
 
