--- a/views/employee/addOrEdit.hbs
+++ b/views/employee/addOrEdit.hbs
@@ -23,6 +23,10 @@
             <label>City</label>
             <input type="text" class="form-control" name="city" placeholder="City" value="{{employee.city}}">
         </div>
+        <div class="form-group col-md-6">
+            <label>Image</label>
+            <input type="text" class="form-control" name="city" placeholder="City" value="{{employee.city}}">
+        </div>
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-info"><i class="fa fa-database"></i> Submit</button>
