--- a/views/employee/addOrEdit.hbs
+++ b/views/employee/addOrEdit.hbs
@@ -25,7 +25,7 @@
         </div>
         <div class="form-group col-md-6">
             <label>Image</label>
-            <input type="text" class="form-control" name="city" placeholder="City" value="{{employee.city}}">
+            <input type="text" class="form-control" name="image" placeholder="image" value="{{employee.image}}">
         </div>
     </div>
     <div class="form-group">
