--- a/views/employee/list.hbs
+++ b/views/employee/list.hbs
@@ -6,6 +6,7 @@
             <th>Email</th>
             <th>Mobile</th>
             <th>City</th>
+            <th>image</th>
             <th></th>
         </tr>
     </thead>
@@ -16,6 +17,7 @@
             <td>{{this.email}}</td>
             <td>{{this.mobile}}</td>
             <td>{{this.city}}</td>
+            <td>{{this.image}}</td>
             <td>
                 <a href="/employee/{{this._id}}"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>
                 <a href="/employee/delete/{{this._id}}" onclick="return confirm('Are you sure to delete this record ?');"><i class="fa fa-trash fa-lg" aria-hidden="true"></i></a>
